Fixing U and adding more sprites
sprites such as starts, win and lose text and more buttons

--- a/Assets/UI Toolkit/UnityThemes/Main menu.uss
+++ b/Assets/UI Toolkit/UnityThemes/Main menu.uss
@@ -13,5 +13,9 @@
     -unity-background-image-tint-color: rgb(135, 57, 192);
 }
 
+#LevelSelectButton:hover {
+    -unity-background-image-tint-color: rgb(135, 57, 192);
+}
+
 .button {
 }
