Adding level select menu and options menu
the options menu do not work but shows in a simple way how it could have been

--- a/Assets/UI Toolkit/UnityThemes/Main menu.uss
+++ b/Assets/UI Toolkit/UnityThemes/Main menu.uss
@@ -17,5 +17,22 @@
     -unity-background-image-tint-color: rgb(135, 57, 192);
 }
 
+#BackButton:hover {
+    -unity-background-image-tint-color: rgb(135, 57, 192);
+}
+
+#Level1:hover {
+    scale: 1.1 1.1;
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+}
+
+#Level2:hover {
+    scale: 1.1 1.1;
+}
+
+#Level3:hover {
+    scale: 1.1 1.1;
+}
+
 .button {
 }
