--- a/Assets/LunarLander2025/Content/UI/PauseMenu.uxml
+++ b/Assets/LunarLander2025/Content/UI/PauseMenu.uxml
@@ -1,6 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/PauseMenu.uss?fileID=7433441132597879392&amp;guid=b83edc3c6f0d6c1409dabaf559cc1f77&amp;type=3#PauseMenu" />
-<<<<<<< HEAD:Assets/UI Toolkit/PauseMenu.uxml
     <ui:VisualElement name="PauseFrame" style="flex-grow: 1; display: flex;">
         <ui:VisualElement name="Background" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI%20elements/Main%20Menu/Background-100.jpg?fileID=21300000&amp;guid=aad68bef0b1b3fe4db5092f1f5c0732b&amp;type=3#Background-100&quot;); opacity: 0.56;" />
         <ui:VisualElement name="Frame" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI%20elements/Pause/Pause%20frame%20menu.png?fileID=21300000&amp;guid=cf9d1541998804f4a999047b345cd122&amp;type=3#Pause frame menu&quot;); opacity: 1; background-color: rgba(0, 0, 0, 0); position: absolute; height: 1080px; width: 1920px;">
@@ -27,5 +26,5 @@
         </ui:VisualElement>
         <ui:VisualElement name="OptionTitel" style="flex-grow: 1; position: absolute; background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI%20elements/Main%20Menu/Options.png?fileID=21300000&amp;guid=a8c5e0d7ba267754f97222148c8897cf&amp;type=3#Options&quot;); height: 147px; width: 1030px; top: 153px; left: 451px;" />
         <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="BackButton" style="position: absolute; top: 944px; left: 84px; height: 110px; width: 482px; background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI%20elements/Extra%20buttons/Back%20button.png?fileID=21300000&amp;guid=0fe8bc75e4e71f848b29711916c9ac30&amp;type=3#Back button&quot;); background-color: rgba(188, 188, 188, 0);" />
-    </ui:VisualElement>
+    </ui:VisualElement></ui:VisualElement></ui:VisualElement>
 </ui:UXML>
